add gas limit checks and improve CLI
implemented gas limit vulnerability detection
added gas-issues example contract
created npm bin entry for global installation
detects loops with dynamic arrays and fixed gas stipends

--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "smart-contract-auditor",
   "version": "0.1.0",
   "description": "A tool for auditing smart contracts and detecting common vulnerabilities",
-  "main": "index.js",
+  "main": "src/index.js",
+  "bin": {
+    "smart-audit": "src/index.js"
+  },
   "scripts": {
     "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
